--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <br>
 </br>
 <a href="./aufgabe02/aufgabe2.html">aufgabe2.html</a>
-
+<br>
+</br>
+<a href="./aufgabe03/aufgabe3.html">aufgabe3.html</a>
   </body>
 
 </html>
