--- a/aufgabe3/aufgabe3.html
+++ b/aufgabe3/aufgabe3.html
@@ -6,7 +6,10 @@
       <meta charset="utf-8">
       <name="viewport" content="width=device-width, initial-scale=1">
       <link href="../css/bootstrap.min.css" rel="stylesheet">
-      <style> .table tbody tr:hover {background-color:#76B900} </style>
+      <style>
+      .table tbody tr:hover {background-color:#76B900}
+      .navbar a:visited {color: #0082D1}
+      </style>
     <title>ALLE</title>
 
   </head>
@@ -22,14 +25,14 @@
     </header>
 
     <nav class = navbar>
-
+      <tbody>
       <a href="#ALLE">ALLE</a>
       <a href="#A">A-G</a>
       <a href="#B">H-L</a>
       <a href="#C">M-R</a>
       <a href="#D">S-Z</a>
       <a href="https://fiw.htw-berlin.de/">Startseite</a>
-
+    </tbody>
     </nav>
 
     <section>
