--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <br>
 </br>
 <a href="C:/xampp/htdocs/aufgabe5.php">aufgabe5.html</a>
+<br>
+</br>
+<a href="C:/xampp/htdocs/aufgabe6.php">aufgabe6.html</a>
 
   </body>
 
