--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 <br>
 </br>
 <a href="C:/xampp/htdocs/aufgabe6.php">aufgabe6.html</a>
+<br>
+</br>
+<a href="C:/xampp/htdocs/aufgabe7.php">aufgabe7.html</a>
+<br>
+</br>
+<a href="C:/xampp/htdocs/aufgabe8.php">aufgabe8.html</a>
 
   </body>
 
