--- a/index.html
+++ b/index.html
@@ -8,10 +8,46 @@
 
     <title>Index</title>
 
+    <style>
+    a{
+      font-size: 18px;
+      color: blue;
+    }
+    h1
+    {
+      font-size: 35px;
+      font-family:monospace;
+      color:#0489B1;
+    }
+    table,th,td
+    {
+       border: 1px solid black;
+    }
+    td
+    {
+      text-align: center;
+    }
+    th{
+      font-size: 25px;
+      color: #084B8A;
+    }
+    </style>
+
   </head>
 
   <body>
 <h1> Alle Aufgaben </h1>
+
+<table>
+  <tr>
+    <th>Nummer</th>
+    <th>Aufgabe</th>
+  </tr>
+  <tr>
+    <td> 1 </td>
+    <td><a href="./aufgabe1/aufgabe1.html">aufgabe1.html</a></td>
+  </tr>
+</table>
 
   <a href="./aufgabe1/aufgabe1.html">aufgabe1.html</a>
 <br>
