--- a/index.html
+++ b/index.html
@@ -61,19 +61,22 @@
 <a href="./aufgabe4/aufgabe4.html">aufgabe4.html</a>
 <br>
 </br>
-<a href="C:/xampp/htdocs/aufgabe5.php">aufgabe5.html</a>
+<a href="C:/xampp/htdocs/aufgabe5.php">aufgabe5.php</a>
 <br>
 </br>
-<a href="C:/xampp/htdocs/aufgabe6.php">aufgabe6.html</a>
+<a href="C:/xampp/htdocs/aufgabe6.php">aufgabe6.php</a>
 <br>
 </br>
-<a href="C:/xampp/htdocs/aufgabe7.php">aufgabe7.html</a>
+<a href="C:/xampp/htdocs/aufgabe7.php">aufgabe7.php</a>
 <br>
 </br>
-<a href="C:/xampp/htdocs/aufgabe8.php">aufgabe8.html</a>
+<a href="C:/xampp/htdocs/aufgabe8.php">aufgabe8.php</a>
 <br>
 </br>
-<a href="C:/xampp/htdocs/aufgabe9.php">aufgabe9.html</a>
+<a href="./aufgabe9/aufgabe9.html">aufgabe9.html</a>
+<br>
+</br>
+<a href="./aufgabe10/aufgabe10.html">aufgabe10.html</a>
 
   </body>
 
